--- a/config.env
+++ b/config.env
@@ -4,8 +4,8 @@ PREFIX="."
 PUBLIC_MODE='no'
 
 #═══════[ OWNER DETAILS ]═══════✧#
-OWNER_NAME="᚛stevo᚜"
-OWNER_NUMBER="254794954638"
+OWNER_NAME="᚛mr polite᚜"
+OWNER_NUMBER="254769481764"
 
 #═══════[ BOT PROFILE ]═══════✧#
 BOT_NAME="BWM-XMD"
